# pulumi-automation-playground-gcp

./: .gitignore  Pulumi.yaml  README.md  deploy-iaas-in-cloud-run.yaml  pyproject.toml
images/: pulumi_automation_talk.excalidraw
pulumi_apps/automation_api/: automation_env_vars.py
pulumi_apps/automation_api/cli/: cli_env_vars.py  main.py
pulumi_apps/automation_api/cli/config/: datasets_with_tables.json
pulumi_apps/automation_api/iaas/bq_datasets_tables_creation_api/: Dockerfile  main.py
pulumi_apps/classical_iac/: __main__.py
pulumi_apps/classical_iac/config/: datasets_with_tables.json
pulumi_apps/shared/bq_resources_creation/: dataset_table_input_objects.py  datasets_with_tables.py  datasets_with_tables_config_file_loader.py
terraform/datasets_and_tables/: main.tf  versions.tf
terraform/datasets_and_tables/resource/: datasets_with_tables.json
