[project]
name = "adk-demos"
version = "0.1.0"
description = "Project that shows code samples with Pulumi automation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pulumi-gcp==8.41.1",
    "fastapi==0.116.1",
    "typer==0.17.4",
    "uvicorn==0.35.0"
]

[dependency-groups]
dev = [
    "pytest==8.4.2"
]
